--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap"
     rel="stylesheet" />
-  <title>Do You Love Me?</title>
-  <link rel="stylesheet" href="do_you_love_me.css" />
+  <title>stuff</title>
+  <link rel="stylesheet" href="what.css" />
 </head>
 <body>
 
@@ -42,6 +42,6 @@
   <!-- Load Tenor embed script ONCE globally -->
   <script src="https://tenor.com/embed.js" async></script>
 
-  <script src="do_you_love_me.js"></script>
+  <script src="funnn.js"></script>
 </body>
 </html>
