--- a/index.html
+++ b/index.html
@@ -3,12 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap"
-    rel="stylesheet" />
-  <title>stuff</title>
+  <title>Do You Love Me?</title>
   <link rel="stylesheet" href="what.css" />
 </head>
 <body>
@@ -35,13 +30,12 @@
     </div>
   </div>
 
-  <div class="result-container container" style="display:none;">
-    <!-- Result GIF will be dynamically injected here -->
-  </div>
+  <div class="result-container container" style="display:none;"></div>
 
-  <!-- Load Tenor embed script ONCE globally -->
+  <!-- Load Tenor embed script once globally -->
   <script src="https://tenor.com/embed.js" async></script>
 
+  <!-- Your JS file -->
   <script src="funnn.js"></script>
 </body>
 </html>
